RESOLVED FIXED206527
[GTK][WPE] TestWebKitUserContentFilterStore is crashing
https://bugs.webkit.org/show_bug.cgi?id=206527
Summary [GTK][WPE] TestWebKitUserContentFilterStore is crashing
Alejandro G. Castro
Reported 2020-01-21 06:03:34 PST
There is a couple of assertions causing problems in the test: TEST: ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore... /webkit/WebKitUserContentFilterStore/empty-store: PASS /webkit/WebKitUserContentFilterStore/invalid-filter-source: PASS /webkit/WebKitUserContentFilterStore/filter-save-load: CRASH ASSERTION FAILED: error.category() == WebCore::ContentExtensions::contentExtensionErrorCategory() ../../Source/WebKit/UIProcess/API/glib/WebKitUserContentFilterStore.cpp(73) : GError* toGError(WebKitUserContentFilterError, std::error_code) 1 0x7fb85a6fc739 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x9) [0x7fb85a6fc739] 2 0x561c9005611e ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(_Znwm10NotNullTagPv+0) [0x561c9005611e] 3 0x7fb86785bc87 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6d6c87) [0x7fb86785bc87] 4 0x7fb86785d330 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6d8330) [0x7fb86785d330] 5 0x7fb86785f77e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6da77e) [0x7fb86785f77e] 6 0x7fb8677af496 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF8FunctionIFvNS_6RefPtrIN3API15ContentRuleListENS_13DumbPtrTraitsIS3_EEEESt10error_codeEEclES6_S7_+0xb8) [0x7fb8677af496] 7 0x7fb8677ae1b2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF17CompletionHandlerIFvNS_6RefPtrIN3API15ContentRuleListENS_13DumbPtrTraitsIS3_EEEESt10error_codeEEclES6_S7_+0x102) [0x7fb8677ae1b2] 8 0x7fb8677a2f79 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb61df79) [0x7fb8677a2f79] 9 0x7fb8677acd26 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb627d26) [0x7fb8677acd26] 10 0x7fb866e092d9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF8FunctionIFvvEEclEv+0x63) [0x7fb866e092d9] 11 0x7fb85a72bfaf /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop11performWorkEv+0xbb) [0x7fb85a72bfaf] 12 0x7fb85a7a2d74 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d74) [0x7fb85a7a2d74] 13 0x7fb85a7a2d98 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d98) [0x7fb85a7a2d98] 14 0x7fb85a7a2d26 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d26) [0x7fb85a7a2d26] 15 0x7fb85a7a2d56 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d56) [0x7fb85a7a2d56] 16 0x7fb871e846b8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_context_dispatch+0x138) [0x7fb871e846b8] 17 0x7fb871e84a78 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x4ca78) [0x7fb871e84a78] 18 0x7fb871e84d62 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_loop_run+0xb2) [0x7fb871e84d62] 19 0x561c90057316 ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0xa316) [0x561c90057316] 20 0x561c90055208 ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0x8208) [0x561c90055208] 21 0x7fb871eaab4a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72b4a) [0x7fb871eaab4a] 22 0x7fb871eaaa14 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72a14) [0x7fb871eaaa14] 23 0x7fb871eaaa14 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72a14) [0x7fb871eaaa14] 24 0x7fb871eaadf2 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_test_run_suite+0xc2) [0x7fb871eaadf2] 25 0x7fb871eaae11 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_test_run+0x11) [0x7fb871eaae11] 26 0x561c9005b4dc ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0xe4dc) [0x561c9005b4dc] 27 0x7fb852c4809b /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7fb852c4809b] 28 0x561c90054eda ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0x7eda) [0x561c90054eda] /webkit/WebKitUserContentFilterStore/saved-filter-identifier-match: PASS /webkit/WebKitUserContentFilterStore/remove-filter: CRASH ASSERTION FAILED: error.category() == WebCore::ContentExtensions::contentExtensionErrorCategory() ../../Source/WebKit/UIProcess/API/glib/WebKitUserContentFilterStore.cpp(73) : GError* toGError(WebKitUserContentFilterError, std::error_code) 1 0x7f17ec97e739 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x9) [0x7f17ec97e739] 2 0x558185e2f11e ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(_Znwm10NotNullTagPv+0) [0x558185e2f11e] 3 0x7f17f9addc87 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6d6c87) [0x7f17f9addc87] 4 0x7f17f9adf330 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6d8330) [0x7f17f9adf330] 5 0x7f17f9ae177e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb6da77e) [0x7f17f9ae177e] 6 0x7f17f9a31496 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF8FunctionIFvNS_6RefPtrIN3API15ContentRuleListENS_13DumbPtrTraitsIS3_EEEESt10error_codeEEclES6_S7_+0xb8) [0x7f17f9a31496] 7 0x7f17f9a301b2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF17CompletionHandlerIFvNS_6RefPtrIN3API15ContentRuleListENS_13DumbPtrTraitsIS3_EEEESt10error_codeEEclES6_S7_+0x102) [0x7f17f9a301b2] 8 0x7f17f9a24f79 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb61df79) [0x7f17f9a24f79] 9 0x7f17f9a2ed26 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xb627d26) [0x7f17f9a2ed26] 10 0x7f17f908b2d9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF8FunctionIFvvEEclEv+0x63) [0x7f17f908b2d9] 11 0x7f17ec9adfaf /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop11performWorkEv+0xbb) [0x7f17ec9adfaf] 12 0x7f17eca24d74 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d74) [0x7f17eca24d74] 13 0x7f17eca24d98 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d98) [0x7f17eca24d98] 14 0x7f17eca24d26 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d26) [0x7f17eca24d26] 15 0x7f17eca24d56 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x36e1d56) [0x7f17eca24d56] 16 0x7f18041066b8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_context_dispatch+0x138) [0x7f18041066b8] 17 0x7f1804106a78 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x4ca78) [0x7f1804106a78] 18 0x7f1804106d62 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_loop_run+0xb2) [0x7f1804106d62] 19 0x558185e30316 ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0xa316) [0x558185e30316] 20 0x558185e2e670 ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0x8670) [0x558185e2e670] 21 0x7f180412cb4a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72b4a) [0x7f180412cb4a] 22 0x7f180412ca14 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72a14) [0x7f180412ca14] 23 0x7f180412ca14 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x72a14) [0x7f180412ca14] 24 0x7f180412cdf2 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_test_run_suite+0xc2) [0x7f180412cdf2] 25 0x7f180412ce11 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_test_run+0x11) [0x7f180412ce11] 26 0x558185e344dc ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0xe4dc) [0x558185e344dc] 27 0x7f17e4eca09b /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f17e4eca09b] 28 0x558185e2deda ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/WebKit2Gtk/TestWebKitUserContentFilterStore(+0x7eda) [0x558185e2deda]
Attachments
Patch (2.41 KB, patch)
2020-01-21 06:09 PST, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2020-01-21 06:09:08 PST
EWS Watchlist
Comment 2 2020-01-21 06:10:12 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Adrian Perez
Comment 3 2020-01-21 06:50:47 PST
Comment on attachment 388293 [details] Patch Nice catch!
WebKit Commit Bot
Comment 4 2020-01-21 07:39:56 PST
Comment on attachment 388293 [details] Patch Clearing flags on attachment: 388293 Committed r254852: <https://trac.webkit.org/changeset/254852>
WebKit Commit Bot
Comment 5 2020-01-21 07:39:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.